--- a/pom.xml
+++ b/pom.xml
@@ -88,13 +88,6 @@
 		</dependency>
 
 
-		<dependency>
-			<groupId>graphRelationExplore</groupId>
-			<artifactId>relExplore</artifactId>
-			<scope>system</scope>
-			<version>0.0.1-SNAPSHOT</version>
-			<systemPath>/home/arnab/Workspaces/SchemaMapping/OIE-Integration/src/lib/pathFinder.jar</systemPath>
-		</dependency>
 
 		<dependency>
 			<groupId>commons-logging</groupId>
@@ -110,5 +103,23 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.6</version>
 		</dependency>
+
+
+		<dependency>
+			<groupId>jgrapht</groupId>
+			<artifactId>jgrapht</artifactId>
+			<version>0.7.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jgrapht</groupId>
+			<artifactId>jgrapht-jdk1.5</artifactId>
+			<version>0.7.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.hp.hpl.jena</groupId>
+			<artifactId>arq</artifactId>
+			<version>2.8.8</version>
+		</dependency>
+
 	</dependencies>
 </project>
