--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,18 @@
 			<artifactId>arq</artifactId>
 			<version>2.8.8</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sourceforge.owlapi</groupId>
+			<artifactId>owlapi-distribution</artifactId>
+			<version>3.4.10</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.ansell.pellet</groupId>
+			<artifactId>pellet-owlapiv3</artifactId>
+			<version>2.3.6-ansell</version>
+		</dependency>
+
 
 	</dependencies>
 </project>
