--- a/pom.xml
+++ b/pom.xml
@@ -154,5 +154,15 @@
 			<version>6.1.0.CR1</version>
 			<type>pom</type>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>4.4-alpha1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.4-alpha1</version>
+		</dependency>
 	</dependencies>
 </project>
