--- a/pom.xml
+++ b/pom.xml
@@ -164,5 +164,10 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.4-alpha1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.directory.studio</groupId>
+			<artifactId>org.apache.commons.collections</artifactId>
+			<version>3.2.1</version>
+		</dependency>
 	</dependencies>
 </project>
