adding REVERB processing  scripts

--- a/CONFIG.cfg
+++ b/CONFIG.cfg
@@ -33,3 +33,6 @@ BATCH_SIZE=500
 
 //********** Extended Plugin Settings ****************************************
 TOP_K_NUMERIC_PROPERTIES=10
+
+
+IS_NELL=false
