adding yago type inclusion

--- a/src/main/resources/input/CONFIG.cfg
+++ b/src/main/resources/input/CONFIG.cfg
@@ -19,7 +19,7 @@ USE_LOGIT=true
 
 // ********* RELOAD DBPEDIA TYPES ***************************************
 // Setting it true, makes it run slower, since SPARQL endpoint query is executed and loaded in DB
-RELOAD_TYPE=false
+RELOAD_TYPE=TRUE
 
 SCALE_WEIGHT=0
 
@@ -35,4 +35,8 @@ BATCH_SIZE=500
 TOP_K_NUMERIC_PROPERTIES=10
 
 
+//************** which OIE data set it is **********************
 IS_NELL=false
+
+//************* allow including YAGO types for missing dbpedia types
+INCLUDE_YAGO_TYPES=true
