--- a/src/main/resources/input/CONFIG.cfg
+++ b/src/main/resources/input/CONFIG.cfg
@@ -29,7 +29,7 @@ ENGAGE_INTER_STEP=false
 //********** affects only when RELOAD_TYPE is set to true *************
 
 // Batch operation size
-BATCH_SIZE=1000
+BATCH_SIZE=10000
 
 //********** Extended Plugin Settings ****************************************
 TOP_K_NUMERIC_PROPERTIES=500
@@ -40,3 +40,7 @@ IS_NELL=false
 
 //************* allow including YAGO types for missing dbpedia types
 INCLUDE_YAGO_TYPES=true
+
+
+OIE_DATA_PATH=/home/adutta/git/OIE-Integration/src/main/resources/input/noDigitHighAll.csv
+WORKFLOW_NORMAL=false
