adding DBpedia clustreing (WF2)

--- a/src/main/resources/input/CONFIG.cfg
+++ b/src/main/resources/input/CONFIG.cfg
@@ -43,4 +43,4 @@ INCLUDE_YAGO_TYPES=true
 
 
 OIE_DATA_PATH=/home/adutta/git/OIE-Integration/src/main/resources/input/noDigitHighAll.csv
-WORKFLOW_NORMAL=false
+WORKFLOW_NORMAL=true
